2007-08-08  Simos Xenitellis  <simos@gnome.org>

	* help/el/el.po: Added Greek translation by Dimitrios Typaldos 
	<dtfedora@yahoo.com>
	* help/Makefile.am: Added el to DOC_LINGUAS.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_GSwitchItApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* gswitchit-applet.c: (GSwitchItAppletCmdAbout),
	(GSwitchItAppletInit): 	
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-04-17  Roberto Majadas  <telemaco@openshine.com>

	* help/es/es.po: Updated spanish translation

2007-03-31  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, GNOME_KeyboardApplet.server.in.in: improving bugzilla
	support, http://bugzilla.gnome.org/show_bug.cgi?id=424989

2007-03-19  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, gswitchit.schemas.in: dropping unneeded and obsolete
	schema

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* gswitchit-applet.c: Add missing include to get rid of a warning.

2007-01-22  Timur Salikhov  <Tima-S@yandex.ru>
	
	* help/ru/ru.po:
	* help/Makefile.am: Added Russian translation.

2006-11-20  Christophe Bliard  <christophe.bliard@trux.info>

	* help/fr/fr.po: Updated French translation.

2006-11-16  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* help/C/gswitchit.xml: Fix build.

2006-10-05  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* gswitchit-applet.c: gcc2.95 fixes. Patch from Jens Granseuer.
	  Closes #348875.

2006-08-06  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: "reinit-ui" processed, background is updated,
	closing #318787

2006-07-25  Christophe Bliard  <christophe.bliard@trux.info>

	* help/fr/fr.po: Updated French translation
	