@@ -3,12 +3,13 @@
     <popup name="button3">
       <submenu name="groups" _label="_Groups">
       </submenu>
-      <menuitem name="Item 2" verb="Capplet" _label="Keyboard _Preferences"/>
+      <menuitem name="Capplet" verb="Capplet" _label="Keyboard _Preferences"/>
       <separator/>     
-      <menuitem name="Item 3" verb="Preview" _label="Show Current _Layout"/>
-      <menuitem name="Item 5" verb="Help" _label="_Help"
+      <menuitem name="Preview" verb="Preview" _label="Show Current _Layout"/>
+      <menuitem name="Plugins" verb="Plugins" _label="Pl_ugins"/>
+      <menuitem name="Help" verb="Help" _label="_Help"
                 pixtype="stock" pixname="gtk-help"/>
-      <menuitem name="Item 6" verb="About" _label="_About"
+      <menuitem name="About" verb="About" _label="_About"
                 pixtype="stock" pixname="gtk-about"/>
     </popup>
   </popups>
