@@ -1,3 +1,8 @@
+2007-08-10  Sergey Udaltsov <svu@gnome.org>
+
+	* GNOME_GSwitchItApplet.xml, gswitchit-applet.c: dynamic menu item
+	"Plugins" added (instead of the capplet, now hidden in g-c-c)
+
 2007-08-08  Simos Xenitellis  <simos@gnome.org>
 
 	* help/el/el.po: Added Greek translation by Dimitrios Typaldos 
